--- a/source/Google/Core/Core.targets
+++ b/source/Google/Core/Core.targets
@@ -3,26 +3,19 @@
 	<PropertyGroup>
 		<_GoogleCoreAssemblyName>Google.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleCoreAssemblyName>
 		<_GoogleCoreItemsFolder>GCr-3.1.0</_GoogleCoreItemsFolder>
+		<_GoogleCoreSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleCoreItemsFolder)\Frameworks\</_GoogleCoreSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleCoreItemsFolder)">
 			<Url>https://www.gstatic.com/cpdc/4f036175e1463726-Google-3.1.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_GoogleCoreItems" />
+		<NativeReference Include="$(_GoogleCoreSDKBaseFolder)GGLCore.framework">
+			<Kind>Framework</Kind>
+			<SmartLink>True</SmartLink>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC -lz -lstdc++ -lsqlite3</LinkerFlags>
+			<Frameworks>AddressBook AssetsLibrary CoreFoundation CoreLocation CoreMotion MessageUI SystemConfiguration</Frameworks>
+		</NativeReference>
 	</ItemGroup>
-	<Target Name="_GoogleCoreItems">
-
-		<PropertyGroup>
-			<_GoogleCoreSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleCoreItemsFolder)\Frameworks\</_GoogleCoreSDKBaseFolder>
-		</PropertyGroup>
-
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_GoogleCoreSDKBaseFolder)GGLCore.framework\GGLCore">
-				<LogicalName>GGLCore</LogicalName>
-				<AssemblyName>$(_GoogleCoreAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-		</ItemGroup>
-		
-	</Target>
 </Project>
