--- a/source/Google/GoogleCloudMessaging/GoogleCloudMessaging.targets
+++ b/source/Google/GoogleCloudMessaging/GoogleCloudMessaging.targets
@@ -2,34 +2,39 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleCloudMessagingAssemblyName>Google.GoogleCloudMessaging, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleCloudMessagingAssemblyName>
-		<_GoogleCloudMessagingId>GCldMssgng-1.2.0</_GoogleCloudMessagingId>
-		<_GoogleGCMIPhoneUtilitiesId>GIPhnU-1.2.0</_GoogleGCMIPhoneUtilitiesId>
+		<_GoogleCloudMessagingItemsFolder>GCldMssgng-1.2.0</_GoogleCloudMessagingItemsFolder>
+		<_GoogleGCMIPhoneUtilitiesItemsFolder>GIPhnU-1.2.0</_GoogleGCMIPhoneUtilitiesItemsFolder>
+		<_GoogleCloudMessagingSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleCloudMessagingItemsFolder)\Libraries\</_GoogleCloudMessagingSDKBaseFolder>
+		<_GoogleGCMIPhoneUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleGCMIPhoneUtilitiesItemsFolder)\Libraries\</_GoogleGCMIPhoneUtilitiesSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
-		<XamarinBuildRestoreResources Include="_GoogleCloudMessagingItems" />
-		<XamarinBuildDownload Include="$(_GoogleCloudMessagingId)">
+		<XamarinBuildDownload Include="$(_GoogleCloudMessagingItemsFolder)">
 			<Url>https://www.gstatic.com/cpdc/1ee08e474579fa86-GoogleCloudMessaging-1.2.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_GoogleGCMIPhoneUtilitiesId)">
+		<NativeReference Include="$(_GoogleCloudMessagingSDKBaseFolder)libGcmLib.a">
+			<Kind>Static</Kind>
+			<SmartLink>True</SmartLink>
+			<ForceLoad>True</ForceLoad>
+			<IsCxx>True</IsCxx>
+			<LinkerFlags>-ObjC -lsqlite3</LinkerFlags>
+		</NativeReference>
+
+		<XamarinBuildDownload Include="$(_GoogleGCMIPhoneUtilitiesItemsFolder)">
 			<Url>https://www.gstatic.com/cpdc/4730cbb3191ed1e7-GoogleIPhoneUtilities-1.2.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
+		<NativeReference Include="$(_GoogleGCMIPhoneUtilitiesSDKBaseFolder)libGIP_Locale.a">
+			<Kind>Static</Kind>
+			<SmartLink>True</SmartLink>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
+		</NativeReference>
+		<NativeReference Include="$(_GoogleGCMIPhoneUtilitiesSDKBaseFolder)libGIP_Reachability.a">
+			<Kind>Static</Kind>
+			<SmartLink>True</SmartLink>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
+		</NativeReference>
 	</ItemGroup>
-	<Target Name="_GoogleCloudMessagingItems">
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(XamarinBuildDownloadDir)$(_GoogleCloudMessagingId)\Libraries\libGcmLib.a">
-				<LogicalName>libGcmLib.a</LogicalName>
-				<AssemblyName>$(_GoogleCloudMessagingAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(XamarinBuildDownloadDir)$(_GoogleGCMIPhoneUtilitiesId)\Libraries\libGIP_Locale.a">
-				<LogicalName>libGIP_Locale.a</LogicalName>
-				<AssemblyName>$(_GoogleCloudMessagingAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(XamarinBuildDownloadDir)$(_GoogleGCMIPhoneUtilitiesId)\Libraries\libGIP_Reachability.a">
-				<LogicalName>libGIP_Reachability.a</LogicalName>
-				<AssemblyName>$(_GoogleCloudMessagingAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-		</ItemGroup>
-	</Target>
 </Project>
