--- a/source/Google/TagManager/TagManager.targets
+++ b/source/Google/TagManager/TagManager.targets
@@ -16,14 +16,6 @@
 			<Url>https://dl.google.com/dl/cpdc/e0b99b8644b80573/GoogleTagManager-7.1.2.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_GoogleUtilitiesLegacyItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/0042fdcb3a71fe81/GoogleUtilitiesLegacy-1.3.2.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_GoogleSymbolUtilitiesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/7ecdffda6fbef4af/GoogleSymbolUtilities-1.1.2.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleTagManagerSDKBaseFolder)Frameworks\GoogleTagManager.framework">
 			<Kind>Framework</Kind>
 			<SmartLink>True</SmartLink>
@@ -31,6 +23,11 @@
 			<LinkerFlags>-ObjC -lsqlite3 -lz</LinkerFlags>
 			<Frameworks>AdSupport CoreTelephony JavaScriptCore SystemConfiguration UIKit</Frameworks>
 		</NativeReference>
+
+		<XamarinBuildDownload Include="$(_GoogleUtilitiesLegacyItemsFolder)">
+			<Url>https://dl.google.com/dl/cpdc/0042fdcb3a71fe81/GoogleUtilitiesLegacy-1.3.2.tar.gz</Url>
+			<Kind>Tgz</Kind>
+		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleUtilitiesLegacySDKBaseFolder)GoogleUtilitiesLegacy.framework">
 			<Kind>Framework</Kind>
 			<SmartLink>True</SmartLink>
@@ -38,21 +35,20 @@
 			<LinkerFlags>-ObjC -lz</LinkerFlags>
 			<Frameworks>AddressBook CoreGraphics</Frameworks>
 		</NativeReference>
+		
+		<XamarinBuildDownload Include="$(_GoogleSymbolUtilitiesItemsFolder)">
+			<Url>https://dl.google.com/dl/cpdc/7ecdffda6fbef4af/GoogleSymbolUtilities-1.1.2.tar.gz</Url>
+			<Kind>Tgz</Kind>
+		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleSymbolUtilitiesSDKBaseFolder)GoogleSymbolUtilities.framework">
 			<Kind>Framework</Kind>
 			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC</LinkerFlags>
 		</NativeReference>
-		<XamarinBuildRestoreResources Include="_GoogleTagManagerItems"/>
+
+		<BundleResource Include="$(_GoogleTagManagerSDKBaseFolder)Resources\TagManagerResources\TAGRuntime.js.dat">
+			<LogicalName>TagManagerResources.bundle\TAGRuntime.js.dat</LogicalName>
+		</BundleResource>
 	</ItemGroup>
-	
-	<Target Name="_GoogleTagManagerItems">
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_GoogleTagManagerSDKBaseFolder)Resources\TagManagerResources\TAGRuntime.js.dat">
-				<LogicalName>__monotouch_content_TagManagerResources.bundle_fTAGRuntime.js.dat</LogicalName>
-				<AssemblyName>$(_GoogleTagManagerAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-		</ItemGroup>
-	</Target>
 </Project>
